force-app/main/default/objects/RH_Settings__c/RH_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>RH Settings</label>
</CustomObject>