force-app/main/default/objects/RH_Settings__c/fields/Aro_DefaultEmailEncodingKey__c.field-meta.xml
<CustomField>
    <fullName>RH_DefaultEmailEncodingKey__c</fullName>
    <label>Default Email Encoding Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>