force-app/main/default/objects/RH_Settings__c/fields/Aro_DefaultLocaleSidKey__c.field-meta.xml
<CustomField>
    <fullName>RH_DefaultLocaleSidKey__c</fullName>
    <label>Default LocaleSid Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>