force-app/main/default/objects/RH_Settings__c/fields/Aro_DefaultTimeZoneSidKey__c.field-meta.xml
<CustomField>
    <fullName>RH_DefaultTimeZoneSidKey__c</fullName>
    <label>Default TimeZoneSid Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>