force-app/main/default/objects/RH_Settings__c/fields/community_Link__c.field-meta.xml
<CustomField>
    <fullName>community_Link__c</fullName>
    <label>community Link</label>
    <length>255</length>
    <type>Text</type>
</CustomField>