force-app/main/default/objects/RH_Settings__c/fields/Display_Name__c.field-meta.xml
<CustomField>
    <fullName>Display_Name__c</fullName>
    <defaultValue>&apos;Noeli Intern&apos;</defaultValue>
    <description>store the display name of the email adrress in org-wide email adress</description>
    <label>Display Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>