force-app/main/default/objects/RH_Settings__c/fields/NL_SaveLogs__c.field-meta.xml
<CustomField>
    <fullName>NL_SaveLogs__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Save Logs</label>
    <type>Checkbox</type>
</CustomField>