force-app/main/default/objects/RH_Settings__c/fields/record_page_Link__c.field-meta.xml
<CustomField>
    <fullName>record_page_Link__c</fullName>
    <label>record page Link</label>
    <length>255</length>
    <type>Text</type>
</CustomField>