force-app/main/default/objects/RH_Settings__c/fields/RH_CurrentQuoteConfiguration__c.field-meta.xml
<CustomField>
    <fullName>RH_CurrentQuoteConfiguration__c</fullName>
    <defaultValue>&apos;DEV&apos;</defaultValue>
    <label>Current Quote Configuration</label>
    <length>255</length>
    <type>Text</type>
</CustomField>