force-app/main/default/objects/RH_Settings__c/fields/RH_endHour__c.field-meta.xml
<CustomField>
    <fullName>RH_endHour__c</fullName>
    <label>Work End Hour</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>