force-app/main/default/objects/RH_Settings__c/fields/RH_Message_Queue_Size__c.field-meta.xml
<CustomField>
    <fullName>RH_Message_Queue_Size__c</fullName>
    <defaultValue>80</defaultValue>
    <inlineHelpText>Telegram message queue</inlineHelpText>
    <label>Message Queue Size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>