force-app/main/default/objects/RH_Settings__c/fields/RH_Org_Name__c.field-meta.xml
<CustomField>
    <fullName>RH_Org_Name__c</fullName>
    <defaultValue>&apos;noeli&apos;</defaultValue>
    <label>Default Org Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>