force-app/main/default/objects/RH_Settings__c/fields/RH_SF_AuthToken__c.field-meta.xml
<CustomField>
    <fullName>RH_SF_AuthToken__c</fullName>
    <label>Salesforce Authentication Token</label>
    <length>255</length>
    <type>Text</type>
</CustomField>