force-app/main/default/objects/RH_Settings__c/fields/RH_startHour__c.field-meta.xml
<CustomField>
    <fullName>RH_startHour__c</fullName>
    <label>Work Start Hour</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>