force-app/main/default/objects/RH_Settings__c/fields/RH_TelegramBotAPIKey__c.field-meta.xml
<CustomField>
    <fullName>RH_TelegramBotAPIKey__c</fullName>
    <label>Telegram Bot API Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>